<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark2"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/available_space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_available_space"
                    style="@style/TYPOGRAPHY_H5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_space"
                    android:textColor="@color/primary100" />

                <ImageButton
                    android:id="@+id/help_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_help"
                    android:backgroundTint="@color/secondary100"
                    android:contentDescription="@string/ic_help" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/width"
                app:suffixText="@string/meters">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_width"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/lenght"
                app:suffixText="@string/meters">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_lenght"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/height"
                app:suffixText="@string/meters">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_height"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/width_passage"
                app:suffixText="@string/meters">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_passage_width"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/pallet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_pallet"
                    style="@style/TYPOGRAPHY_H5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pallet"
                    android:textColor="@color/primary100" />

                <ImageButton
                    android:id="@+id/help_pallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_help"
                    android:backgroundTint="@color/secondary100"
                    android:contentDescription="@string/ic_help" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/dropdown_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/system_type"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/input_system_type"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/width_frames"
                app:suffixText="@string/meters">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_width_frames"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/space_between_shelfs"
                app:suffixText="@string/meters">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_space_shelfs"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/dropdown_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"

                android:hint="@string/frame_bracing"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/input_frame_bracing"
                    style="@style/TYPOGRAPHY_text_flowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/black100" />
            </com.google.android.material.textfield.TextInputLayout>


            <FrameLayout
                android:id="@+id/button_shadow"
                style="@style/SHADOW_4button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp">

                <Button
                    android:id="@+id/button_scale"
                    style="@style/TYPOGRAPHY_text_flowing_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button_primary"
                    android:text="@string/scale"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </FrameLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>