<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card"
    style="@style/SHADOW_2card">


    <TextView
        android:id="@+id/title"
        style="@style/TYPOGRAPHY_H5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/distribution"
        android:textColor="@color/primary100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ilustration"
        android:contentDescription="@string/ilu_shelf"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ilu_shelf" />

    <TextView
        android:id="@+id/attribute_passage"
        style="@style/TYPOGRAPHY_text_flowing"
        android:textColor="@color/black050"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/passage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/value_passage"
        style="@style/TYPOGRAPHY_H3"
        android:textColor="@color/black100"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilustration" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/black010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_passage" />

    <TextView
        android:id="@+id/attribute_shelf"
        style="@style/TYPOGRAPHY_text_flowing"
        android:textColor="@color/black050"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/shelf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/value_shelf"
        style="@style/TYPOGRAPHY_H3"
        android:textColor="@color/black100"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_shelf" />



</androidx.constraintlayout.widget.ConstraintLayout>