<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card"
    style="@style/SHADOW_2card">


    <TextView
        android:id="@+id/title"
        style="@style/TYPOGRAPHY_H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/frames"
        android:textColor="@color/primary100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/marker"
        style="@style/SHADOW_2card"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_marker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attribute_amount_hor"
        style="@style/TYPOGRAPHY_text_flowing"
        android:textColor="@color/black050"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/amount_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/value_amount_frames_hor"
        style="@style/TYPOGRAPHY_H3"
        android:textColor="@color/black100"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/black010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_amount_hor" />

    <TextView
        android:id="@+id/attribute_unit_weight_hor"
        style="@style/TYPOGRAPHY_text_flowing"
        android:textColor="@color/black050"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/unit_weight_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/value_unit_weight_frames_hor"
        style="@style/TYPOGRAPHY_H3"
        android:textColor="@color/black100"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_unit_weight_hor" />

    <TextView
        android:id="@+id/attribute_amount_diag"
        style="@style/TYPOGRAPHY_text_flowing"
        android:textColor="@color/black050"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/amount_diagonal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/value_amount_frames_diag"
        style="@style/TYPOGRAPHY_H3"
        android:textColor="@color/black100"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/black010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_amount_diag" />

    <TextView
        android:id="@+id/attribute_unit_weight_diag"
        style="@style/TYPOGRAPHY_text_flowing"
        android:textColor="@color/black050"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/unit_weight_diagonal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/value_unit_weight_frames_diag"
        style="@style/TYPOGRAPHY_H3"
        android:textColor="@color/black100"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_unit_weight_diag" />



</androidx.constraintlayout.widget.ConstraintLayout>